[package]
name = "rdab"
version = "0.1.0"
edition = "2021"
authors = ["Mylloon"]
description = "Build and share Revanced-APK"
readme = "README.md"
repository = "https://git.mylloon.fr/Anri/rdab"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
actix-web = "4.4"
octocrab = "0.30"
regex = "1.9.5"
reqwest = "0.11.20"
semver = "1.0.18"
tokio = "1.32.0"
